<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1286dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:text="@string/heading"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/travelQuote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/sub_heading"
            android:textColor="#757575"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="50dp"
            >

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/name_label"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameLabel"
                android:background="#FFFFFF"
                android:fontFamily="sans-serif"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="#333"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/cities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/teal_200"
                android:padding="5dp"
                android:popupBackground="@color/teal_200"
                android:scrollbarStyle="outsideOverlay"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/visiter"
                android:layout_below="@id/cities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link"
                android:textColor="@color/blue"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_centerHorizontal="true"
                />


            <TextView
                android:id="@+id/membersLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/visiter"
                android:padding="10dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/members_label"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <LinearLayout
                android:id="@id/memberContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/membersLabel">
                <EditText
                    android:id="@+id/adults"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:fontFamily="sans-serif"
                    android:hint="@string/adults_hint"
                    android:inputType="number"
                    android:padding="5dp"
                    android:paddingStart="@dimen/_10dp"
                    android:paddingEnd="@dimen/_10dp"
                    android:textColor="#333"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign1"
                    android:textSize="20sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    />

                <EditText
                    android:id="@+id/children"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:fontFamily="sans-serif"
                    android:hint="@string/children_hint"
                    android:inputType="number"
                    android:padding="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="@dimen/_10dp"
                    android:textColor="#333"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/equalsTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign2"
                    android:textSize="20sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:fontFamily="sans-serif"
                    android:padding="5dp"
                    android:hint="@string/total_hint"
                    android:paddingStart="10dp"
                    android:textColor="#333"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/memberContainer"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text=""
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/tripPlanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/error"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:background="@color/teal_700"
                android:textColor="@color/white"
                android:padding="5dp"
                android:text="@string/trip_planner"
                />
        </RelativeLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
